--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
     </style>
     </head>
     <body>
-        Hello World
+        <h2>Causes of Death Visualization</h2>
+
         <div id ="map"></div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.10.0/d3.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-queue/3.0.7/d3-queue.min.js"></script>
