bar chart changes

--- a/EXP13/index.html
+++ b/EXP13/index.html
@@ -42,6 +42,7 @@
         </datalist>
         <output id="rangevalue">2015</output>
     </div>
+    
 
     <div id="slider2">
       <input id="year2" type="range" min="2005" max="2015" step="1" value="2015" list="ticks2" oninput="rangevalue2.value=value"/>
@@ -135,6 +136,10 @@
         <a onclick="DropDownClick2('Income.csv','Black/white')">Black/white</a>
         <a onclick="DropDownClick2('Income.csv','Hispanic/white')">Hispanic/white</a>
       </div>
+    </div>
+
+    <div id ="bar-chart">
+      
     </div>
 
     <script src="map.js"></script>
